style.css
* {
  margin: 0;
  user-select: none;
  scroll-behavior: smooth;
}

:root {
  --adapt: rgba(40, 90, 255);
  --adaptL: rgba(40, 90, 255, 0.8);
  --bg-main: rgb(8, 18, 35);
  --prim: rgb(13, 110, 253);
  --primL: rgba(13, 110, 253, 0.8);
  --bg-white: white;
}

#navbar {
  transition: background 1s;
  box-shadow: 0 0 5px var(--bs-dark);
}

#captain {
  transition: opacity 1s;
  margin-top: 5em;
}

#out-I- {
  background: linear-gradient(to bottom,
      var(--adaptL) 35%,
      var(--primL) 65%);

  position: relative;
}

.trench {
  font-size: 60;
  display: inline-block;
  transform: translateY(200px);
  opacity: 0;
  transition:
    opacity 1s,
    transform 0.3s;
}

.high-life {
  /*Name Animator*/
  margin-top: 0px;
  opacity: 1;
  transform: translateY(0);
  animation: outMan 0.1s ease-in;
}

.bg-light-comf {
  background: rgba(235, 245, 255, 1);
}

@keyframes outMan {
  0% {
    scale: 1.2;
    color: var(--bs-primary);
    text-shadow: 0 0 20px white;
  }
}

@keyframes row-me {

  /*Used By Javascript*/
  25% {
    transform: rotate(50deg);
  }

  50% {
    transform: rotate(deg);
  }

  75% {
    transform: rotate(-50deg);
  }
}

.card {
  /*background: linear-gradient(to bottom right, white, white, white, black); /*#E9E9E9, #060B3F);*/
  background: linear-gradient(90deg, rgba(255, 255, 255, 0.69), 70%, rgba(255, 255, 255, 0.45));
  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 1);
  backdrop-filter: blur(5px) saturate(150%);
  color: var(--bg-main);
  outline: none !important;
  border: none !important;
}

.hide-element-x {
  transform: translateX(10px);
  transition:
    opacity 1s,
    transform 0.5s;
  opacity: 0;
}

.hide-element-y {
  transform: translateY(50px);
  transition:
    opacity 1s,
    transform 0.5s;
  opacity: 0;
}

.revealed-element-x {
  opacity: 1;
  transform: translateX(0);
}

.revealed-element-y {
  opacity: 1;
  transform: translateY(0);
}

#vicko-xp {
  transition: 1 all;
}

#sectionX {
  background: linear-gradient(to bottom, var(--bs-primary), var(--adapt));
}

#glow-flow {
  background-image: linear-gradient(to right,
      var(--bs-primary),
      var(--adapt),
      var(--bs-primary),
      var(--adapt));
  background-size: 400%, 100%;
  background-repeat: repeat-x;
  animation: slideBackground 3s linear infinite;
}

#glow-flow::hover {
  cursor: pointer;
}

@keyframes slideBackground {
  0% {
    background-position: 100% 50%;
  }

  100% {
    background-position: 10% 50%;
  }
}

#end-note {
  font-size: 0.8rem
}

/*
#line-so-p {
  border-left: solid white 0.3rem;
  border-bottom: solid white 0.3rem;
  border-bottom-left-radius: 1rem;
  position: relative;
}
#line-so-p:after{
  content: "";
  position: absolute;
  height: 0.4rem;
  background: var(--bs-primary);
  top: 100%;
  width: 50%;
  right: -0.3rem;
  transform: translateY(-2px);
}
*/

#card-park {
  position: relative;
}

#stroller {
  position: absolute;
  height: 100%;
  background: white;
  width: 0.3rem;
  border-radius: 1rem;
  transform: translateX(-200%);
}

.mod-foot-l {
  margin: 1rem 0;
}

.mod-foot-l>:first-child {
  border-bottom: 0.05rem solid white;
  padding-bottom: 0.5rem;
  margin-bottom: 0.5rem;
  font-weight: bold;
  font-size: 1.1rem;
}

.mod-foot-l>:first-child:after {
  content: attr(title);
  position: absolute;
  right: 0;
  padding-right: 2rem;
}

.mod-foot-l>:nth-child(2) {
  font-size: 0.85rem;
}

.foldable {
  overflow: hidden;
  transition: height 0.5s ease;
  height: 0;
}

